--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 			</div>
 			<div class="col-lg-6 col-xs-12">
                 <label for="mySelect">Select Option</label>
-				<div ng-dropdown-multiselect="" options="example7data" selected-model="example7model" extra-settings="example7settings"></div>
+				<div ng-dropdown-multiselect="" options="vm.example7data" selected-model="vm.example7model" extra-settings="vm.example7settings"></div>
 			</div>
 		</div>
 		<button type="button" class="btn btn-primary" aria-label="Right Align">Submit</button>
