--- a/index.html
+++ b/index.html
@@ -6,77 +6,38 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>Music Track</title>
+<link rel="stylesheet" href="stylesheets/angular-input-stars.css" >
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous"><!-- Optional theme -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous"><!-- Latest compiled and minified JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+<link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-resource.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.3/angular-route.min.js"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.10.0/ui-bootstrap-tpls.js"></script>
 <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/2.4.1/lodash.min.js"></script>
 <script src="js/angularjs-dropdown-multiselect.min.js"></script>
+<script src="js/angular-input-stars.js"></script>
 <script src="js/app.js"></script>
 <script src="js/track.js"></script>
 <script src="js/addtrack.js"></script>
-<script>
-//	var app = angular.module('app', ['ngRoute', '$locationProvider', 'angularjs-dropdown-multiselect', 'ui.bootstrap']);
-//	app.config(function($routeProvider) {
-//		$routeProvider.
-//		  when('/track', {templateUrl:'track.html'}).
-//		  //when('/edit/:projectId', {controller:EditCtrl, template:'detail.html'}).
-//		  when('/addtrack', {controller:Addtrack, templateUrl:'addtrack.html'}).
-//		  when('/genre', {templateUrl:'genre.html'}).
-//		  otherwise({redirectTo:'/track'});
-//	});
-//	app.controller('ListCtrl', function($scope) {
-//		$scope.isHomeActive = "active";
-//		$scope.example7model = [];
-//		$scope.example7data = [ {id: 1, label: "David"}, {id: 2, label: "Jhon"}, {id: 3, label: "Danny"}];
-//		$scope.example7settings = {externalIdProp: ''};
-//		$scope.changeMenu = function(tabName) {
-//			if(tabName === 'home') {
-//				$scope.isHomeActive = "active";
-//				$scope.isGenreActive = "";
-//			} else {
-//				$scope.isHomeActive = "";
-//				$scope.isGenreActive = "active";
-//			}
-//		}
-//	});
-//	app.controller('Addtrack', function($scope) {
-//		$scope.isHomeActive = "active";
-//		$scope.example7model = [];
-//		$scope.example7data = [ {id: 1, label: "David"}, {id: 2, label: "Jhon"}, {id: 3, label: "Danny"}];
-//		$scope.example7settings = {externalIdProp: ''};
-//		$scope.changeMenu = function(tabName) {
-//			if(tabName === 'home') {
-//				$scope.isHomeActive = "active";
-//				$scope.isGenreActive = "";
-//			} else {
-//				$scope.isHomeActive = "";
-//				$scope.isGenreActive = "active";
-//			}
-//		}
-//	});
-</script>
+<script src="js/genre.js"></script>
+<script src="js/addgenre.js"></script>
+
 
 <!-- CACHE FILE: track.html -->
 <script type="text/ng-template" id="track.html">
 	<div class="panel panel-primary">
-	  <div class="panel-heading">Panel heading</div>
 	  <div class="panel-body">
 		<ul class="list-group">
-		  <li class="list-group-item">Cras justo odio</li>
-		  <li class="list-group-item">Dapibus ac facilisis in</li>
-		  <li class="list-group-item">Dapibus ac facilisis in</li>
-		  <li class="list-group-item">Morbi leo risus</li>
-		  <li class="list-group-item">Porta ac consectetur ac</li>
-		  <li class="list-group-item">Vestibulum at eros</li>
+		  <li class="list-group-item" ng-repeat="track in vm.Tracks" ng-click="vm.EditTrack(track)" >{{track.title}} [{{vm.GetGenreFromTrack(track)}}]
+		  <input-stars max="5" icon-full="fa-star" icon-base="fa fa-fw" icon-empty="fa-star-o" ng-model="track.rating"></input-stars>
+		  </li>
 		</ul>
 	  </div>
 	  <div>
-	  <a href="#/addtrack"><button type="button" class="btn btn-primary">Add New</button></a>
+	  <a href="#/addtrack"><button type="button" class="btn btn-primary">Add Track</button></a>
 	</div>	
 </script>
 
@@ -84,19 +45,27 @@
 <script type="text/ng-template" id="addtrack.html">
 	<div class="panel panel-primary">
 	  <div class="panel-heading">Add New</div>
-	  <div class="panel-body">
-		<div class="row">
-			<div class="col-lg-6 col-xs-12">
-                <label for="title">Target</label>
-				<input type="text" class="form-control" id="title" placeholder="Title" ng-model="Track.Title">
-			</div>
-			<div class="col-lg-6 col-xs-12">
-                <label for="mySelect">Select Option</label>
-				<div ng-dropdown-multiselect="" options="vm.example7data" selected-model="vm.example7model" extra-settings="vm.example7settings"></div>
-			</div>
-		</div>
-		<button type="button" class="btn btn-primary" aria-label="Right Align">Submit</button>
-	  </div>
+		  <form>
+			  <div class="panel-body">
+				<div class="row">
+					<div class="col-lg-6 col-xs-12">
+		                <label for="title">Target</label>
+						<input type="text" class="form-control" id="title" placeholder="Title" ng-model="vm.Track.title">
+					</div>
+					<div class="col-lg-6 col-xs-12">
+		                <label for="mySelect">Select Genres</label>
+						<div ng-dropdown-multiselect="" options="vm.Genres" selected-model="vm.Track.genres" extra-settings="vm.MultiSelectSetting"></div>
+					</div>
+					<br /> <br />
+					<div class="col-lg-6 col-xs-12">
+						<br /> <br />
+		                <label for="mySelect">Rating</label>
+						<input-stars max="5" icon-full="fa-star" icon-base="fa fa-fw" icon-empty="fa-star-o" ng-model="vm.Track.rating"></input-stars>
+					</div>
+				</div>
+				<button type="submit" class="btn btn-primary" aria-label="Right Align" ng-click="vm.SaveTraks(vm.Track)">Submit</button>
+			  </div>
+		  </form>
 	  <div>
 	</div>	
 </script>
@@ -105,25 +74,44 @@
 <!-- CACHE FILE: track.html -->
 <script type="text/ng-template" id="genre.html">
 	<div class="panel panel-primary">
-	  <div class="panel-heading">Panel heading</div>
 	  <div class="panel-body">
 		<ul class="list-group">
-		  <li class="list-group-item">Cras justo odio</li>
-		  <li class="list-group-item">Dapibus ac facilisis in</li>
-		  <li class="list-group-item">Dapibus ac facilisis in</li>
-		  <li class="list-group-item">Morbi leo risus</li>
+		  <li class="list-group-item" ng-repeat="genre in vm.Genres" ng-click="vm.EditGenre(genre)">{{genre.name}}</li>
 		</ul>
 	  </div>
 	  <div>
-	  <a href="#/addtrack"><button type="button" class="btn btn-primary">Add New</button></a>
+	  <a href="#/addgenre"><button type="button" class="btn btn-primary">Add Genre</button></a>
 	</div>	
 </script>
+
+<!-- CACHE FILE: addgenre.html -->
+<script type="text/ng-template" id="addgenre.html">
+	<div class="panel panel-primary">
+		<form>
+		  <div class="panel-body">
+			<div class="row">
+				<div class="col-lg-6 col-xs-12">
+	                <label for="title">Genre</label>
+					<input type="text" class="form-control" required id="title" placeholder="Name" ng-model="vm.Genre.name">
+				</div>
+			</div>
+			<br />
+			<input type="submit" class="btn btn-primary" ng-click="vm.SaveGenre(vm.Genre)" aria-label="Right Align" />
+		  </div>
+		  <div>
+		 </form>
+	</div>	
+</script>
+
+
+
+
 </head>
 <body>
   <div class="container" ng-controller="MainCtrl">
 	<ul class="nav nav-pills nav-justified">
-		<li role="presentation" ng-class="isHomeActive" ng-click="changeMenu('home')"><a href="#/track">Home</a></li>
-		<li role="presentation" ng-class="isGenreActive" ng-click="changeMenu('Genre')"><a href="#/genre">Profile</a></li>
+		<li role="presentation" ng-class="isHomeActive" ng-click="changeMenu('home')"><a href="#/track">Music Tracks</a></li>
+		<li role="presentation" ng-class="isGenreActive" ng-click="changeMenu('Genre')"><a href="#/genre">Track's Genre</a></li>
 	</ul>	
 	<div ng-view></div>
   </div>
