--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
 	<div class="panel panel-primary">
 	  <div class="panel-body">	  
 		<div class="row">
-			<div class="col-lg-12 col-xs-12 left-inner-addon">
-			 	<i class="icon-search"></i>
-				<input type="search" class="form-control" placeholder="Search" ng-model="vm.SearchText" />
+			<div class="col-lg-12 col-xs-12">
+				<div class="input-group">
+			 	<span class="input-group-addon" id="basic-addon1">Search</span>
+				<input type="search" class="form-control" placeholder="Search"  aria-describedby="basic-addon1" ng-model="vm.SearchText" />
+				</div>
 				<br />
 			</div>
 		</div>
@@ -84,9 +86,10 @@
 	  <div class="panel-body">  
 		<div class="row">
 			<div class="col-lg-12 col-xs-12 right-inner-addon">
-			 	<i class="icon-search"></i>
-				<input type="search" class="form-control" placeholder="Search" ng-model="vm.SearchText"></input>
-				<br />
+				<div class="input-group">
+			 	<span class="input-group-addon" id="basic-addon1">Search</span>
+				<input type="search" class="form-control" placeholder="Search"  aria-describedby="basic-addon1" ng-model="vm.SearchText" />
+				</div><br />
 			</div>
 		</div>
 		<ul class="list-group">
